# gas-data-pipeline

./: README.md  db_queries.sql  gas_client.py  pyproject.toml  requirements.txt  test.py
app/: main.py
app/api/: main.py
app/api/routes/: data.py  series.py
app/api/v2/: discovery.py  gie.py  health.py  ingestion.py  queries.py  routes.py  schemas.py
app/config/: settings.py
app/db/: models.py
app/ingestion/: dataset_discovery.py  field_discovery.py  loader.py  national_gas_client.py  raw_ingestor.py  run_all.py  series_autoregister.py  series_registry.py  transformer.py
app/ingestion/gie/: service.py  transformer.py
app/scheduler/: jobs.py  scheduler.py
docs/: REFACTORING_AND_NEW_DATASET_GUIDE.md
scripts/: run_ingestion.py
scripts/validate_api/: validate_entsog.py  validate_gas_publications.py  validate_gas_quality.py
